--- a/duck-launcher/manifest.json
+++ b/duck-launcher/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name":"Duck Launcher Example Plugin",
+	"name":"Duck Launcher - Sample",
 	"version":"0.1",
 	"author":"Mark Spurgeon <theduck.dev@gmail.com>",
 	"modules":[
