--- a/settings/manifest.json
+++ b/settings/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name":"Settings [ CONCEPT ]",
-	"version":"0.3",
+	"name":"Settings",
+	"version":"0.4",
 	"author":"Mark Spurgeon <theduck.dev@gmail.com>",
 	"modules":[
 	"Jinja2"
