--- a/guardian/manifest.json
+++ b/guardian/manifest.json
@@ -1,11 +1,11 @@
 {
-	"name":"Guardian",
+	"name":"The Guardian",
 	"version":"0.2",
 	"author":"Mark Spurgeon <theduck.dev@gmail.com>",
 	"modules":[
 	"Jinja2",
 	"PyCrypto"
 	],
-	"background-color":"#f5f5f5",
+	"background-color":"#ecf0f1",
 	"foreground-color":"#005689"
 }
